# pomerol2dcore

./: .gitignore  CMakeLists.txt  Config.h.in  README.md
include/: OperatorPresetsExtra.h  Params.h  ReadWrite.h
sample/: freqs.in  h0.in  param.in  umat.in
src/: OperatorPresetsExtra.cpp  Params.cpp  ReadWrite.cpp  pomerol2dcore.cpp
